annots: Fixed adding annotation of Subtype Popup to pdf page

https://bugs.freedesktop.org/show_bug.cgi?id=89136