poppler/Annot.cc
@@ -2089,6 +2089,16 @@ void AnnotMarkup::setLabel(GooString *new_label) {
 }
 
 void AnnotMarkup::setPopup(AnnotPopup *new_popup) {
+  // If there exists an old popup annotation that is already
+  // associated with a page, then we need to remove that
+  // popup annotation from the page. Otherwise we would have
+  // dangling references to it.
+  if (popup != NULL && popup->getPageNum() != 0) {
+    Page *pageobj = doc->getPage(popup->getPageNum());
+    if (pageobj) {
+      pageobj->removeAnnot(popup);
+    }
+  }
   delete popup;
 
   if (new_popup) {
@@ -2100,6 +2110,15 @@ void AnnotMarkup::setPopup(AnnotPopup *new_popup) {
 
     new_popup->setParent(this);
     popup = new_popup;
+
+    // If this annotation is already added to a page, then we
+    // add the new popup annotation to the same page.
+    if (page != 0) {
+      Page *pageobj = doc->getPage(page);
+      assert(pageobj != NULL); // pageobj should exist in doc (see setPage())
+
+      pageobj->addAnnot(popup);
+    }
   } else {
     popup = NULL;
   }
